fixing quiz question overflowing button borders

--- a/src/app/dialog-content-example/dialog-content-example-dialog.component.css
+++ b/src/app/dialog-content-example/dialog-content-example-dialog.component.css
@@ -10,6 +10,12 @@ button {
   border-radius: 4px;
   cursor: pointer;
   width: 100%;
+  height: 70px;
+  white-space: normal;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  line-height: 20px;
 }
 
 ul {
@@ -29,9 +35,6 @@ li {
 
 .questions {
   width: 100%;
-}
-.questions button {
-  align-items: flex-start;
 }
 
 .green {
